@@ -12,6 +12,6 @@ fork := true
 
 Test / fork := true
 
-javacOptions += "--enable-preview"
+javacOptions += "--enable-preview --add-modules jdk.incubator.concurrent"
 
 javaOptions ++= Seq("--enable-preview", "--add-modules", "jdk.incubator.concurrent")
